# USTB-Course-materials

Collection-of-Study-Materials-USTB-CS/: 计算机学科概论复习资料.doc
USTB_digital_logic_homework/task2/: GPU.v  clkDiv.v  key_ctrl.v  top.v
USTB_digital_logic_homework/task3/: GPU.v  clkDiv.v  key_ctrl.v  top.v
USTB_digital_logic_homework/task4/: clkDiv.v  time_calc.v  time_set.v  time_top.v
USTB_digital_logic_homework/电梯/: clkDiv.v  dianti_top.v
大国钢铁/1/: 大国钢铁第9周课堂笔记.md
大国钢铁/2/: 大国钢铁第10周课堂笔记.md
大国钢铁/3/: 大国钢铁第11周课堂笔记.md
大国钢铁/4/: 大国钢铁第12周课堂笔记.md
大国钢铁/5/: 大国钢铁第13周课堂笔记.md
大国钢铁/6/: 大国钢铁第14周课堂笔记.md
大物/: 光学20211222.ppt  振动波动20211222.ppt  热学20211222.ppt  量子物理20211222.ppt
数电实验/: 数电实验 相关芯片.md  第一次实验报告.docx  第三次实验报告.docx  第二次实验报告.docx  第四次实验报告.docx
概率论/: 2015-2016_2_概率统计_d_ABC.doc  北京科技大学2005-2006概率论与数理统计试题.doc  北京科技大学2005-2006概率论与数理统计试题A答案.doc  北京科技大学2005-2006第二学期概率论与数理统计试题A卷.doc.docx  北京科技大学2007-2008概率论与数理统计试题(C).doc  北京科技大学2011-2012第二学期概率期末B.doc  未注明年份期末试题.doc  概率论与数理统计公式整理.doc
物理实验/: 17-18参考答案.txt  2017-2018-1工科实验I 试卷 -最终版.docx  ~$实验I笔试总结.docx  ~WRL3940.tmp  大物实验I笔试总结.docx
电路实验/: 计2005-电路实验一报告42024137赵方程.docx  计2005-电路实验三报告42024137赵方程.docx  计2005-电路实验二报告42024137赵方程.docx  计2005-电路总结报告-42024137-赵方程.docx
离散数学/Code/3/: CMakeLists.txt  Huffman.cpp  Huffman.h  main.cpp
辅助翻译/: 1. 考试要求具体.docx  42024137赵方程.docx  C-你不知道的英镑纸币防伪密码.txt  C-我们该如何阻止抗生素的耐药性.txt  C-我们该如何阻止抗生素耐药性.txt  C-联合国安理会第1910（2010）号决议 [索马里局势].docx  C-联合国安理会第1910（2010）号决议 [索马里局势].txt  E-你不知道的英镑纸币防伪密码.txt  E-我们该如何阻止抗生素耐药性.txt  E-联合国安理会第1910（2010）号决议 [索马里局势].txt  联合国安理会第1910（2010）号决议 [索马里局势]对齐.xlsx
(+179 files in other folders)
